Cambio fichero lectura

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ __pycache__/
 venv/
 blocklist.txt
 data/geoip/
+
+# Logs y datos locales
+data/OpenSSH_2k.log
+data/uploads/
+
+# Variables de entorno
+.env
